Fix col-xs-12 not working on mobile Increase font size of a footer

--- a/portfolio.css
+++ b/portfolio.css
@@ -47,8 +47,7 @@ h1, h3 {
     padding-bottom: 2%;
     background-color: rgba(255, 255, 255, 0.5);
     margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
+
 }
 .wrapper:hover {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
